--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,13 @@
   @tailwind components;
   @tailwind utilities;
   
+
+  .no-visible-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
+}
+ 
+.no-visible-scrollbar::-webkit-scrollbar {
+  display: none;
+}
