--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
   @tailwind utilities;
   
 
-  .no-visible-scrollbar {
+  /* .no-visible-scrollbar {
   scrollbar-width: none;
   -ms-overflow-style: none;
   -webkit-overflow-scrolling: touch;
@@ -13,4 +13,16 @@
  
 .no-visible-scrollbar::-webkit-scrollbar {
   display: none;
+} */
+body {
+  transition-property: opacity, transform, filter, background;
+  transition-timing-function: ease-in-out;
+  transition-duration: 500ms;
+}
+
+.page-transition {
+  opacity: 0;
+  background: black;
+  transform: translateY(40px);
+  filter: blur(12px);
 }
